# InSPIRE

./: .gitignore  LICENSE.md  README.md  cla-1.0.md  delete me test file.txt  requirements.txt  sign-cla.md
ShinyApps/: README.rtf
inspire-agrivolt-package/: .gitignore  README.md  check_completeness.py  combine.ipynb  completeness.ipynb  postprocess.ipynb  pyproject.toml
inspire-agrivolt-package/inspire_agrivolt/: __init__.py  beds_postprocessing.py  file_operations.py  irradiance_sam.py  main.py  utils.py  verify.py
inspire-agrivolt-package/scripts/: _env_utils.sh  bifacial_radiance_comparison.py  check_combine.py  combine.py  postprocess.py  run_all_configs_state.sh  run_all_states_config.sh  s3_delete.py  submit_check_combine.slurm  submit_combine.slurm  submit_postprocess.slurm  submit_state_conf.sh  submit_upload_zarrs.slurm  upload.py
inspire-agrivolt-package/states-gids/: Alaska-gids.txt  Connecticut-gids.txt  Delaware-gids.txt  Illinois-gids.txt  Iowa-gids.txt  Kansas-gids.txt  Kentucky-gids.txt  Louisiana-gids.txt  Maine-gids.txt  Massachusetts-gids.txt  Mississippi-gids.txt  Nevada-gids.txt  North Dakota-gids.txt  Pennsylvania-gids.txt  South Carolina-gids.txt  South Dakota-gids.txt  Tennessee-gids.txt  Texas-gids.txt  Vermont-gids.txt
inspire-agrivolt-package/test-notebooks/: ag_ir.json  calculate-bed-pitch-bins.ipynb  combine.ipynb  test.ipynb
inspire-agrivolt-package/test-notebooks/model_subset.zarr/: .zmetadata
inspire-agrivolt-package/test-notebooks/postprocess_subset.zarr/: .zmetadata
inspire-agrivolt-package/tests/: test_pysam.py
(+10737 files in other folders)
